Tue Jul 13 14:20:09 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/os_errno.h:
          Fixed problems with msvc 10, , thanks to Max Zhou
          <earthdog at 126.com> for supplying these changes, this fixes
          bugzilla 3873

Tue Jul 13 11:08:38 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/vc10nmake.mpb:
        * netsvcs/lib/lib.mpc:
          vc10 support, thanks to Max Zhou <earthdog at 126.com> for
          supplying these changes

Mon Jul 12 11:04:58 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ACE.cpp:
        * ace/Activation_Queue.h:
        * ace/Active_Map_Manager.h:
        * ace/Dev_Poll_Reactor.h:
        * ace/Dev_Poll_Reactor.inl:
        * ace/Event_Handler.h:
        * ace/Filecache.h:
        * ace/Manual_Event.h:
        * ace/Map_Manager.h:
        * ace/Mem_Map.h:
        * ace/Message_Block.h:
        * ace/OS_Log_Msg_Attributes.h:
        * ace/OS_NS_unistd.h:
        * ace/Object_Manager.h:
        * ace/Recursive_Thread_Mutex.h:
          Layout, const, and doxygen fixes

Mon Jul 12 10:11:24 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/DLL.h:
        * ace/DLL_Manager.h:
        * ace/Dirent.h:
        * ace/Dump_T.h:
        * ace/Event_Handler.h:
        * ace/File_Lock.h:
        * ace/INET_Addr.h:
        * ace/Log_Msg_Callback.h:
        * ace/Log_Record.h:
        * ace/Logging_Strategy.h:
          Fixed set of doxygen warnings

Mon Jul 12 08:19:58 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Connector.h:
        * ace/Malloc_Base.h:
        * ace/SString.h:
        * ace/Stream.h:
        * ace/Task.h:
          Fixed set of doxygen warnings

Fri Jul 09 09:35:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * bin/PerlACE/Process_Unix.pm:
          Fix killall() valgrind handling.

Thu Jul 08 14:41:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>
